Adding SASS and styles to results
Signed-off-by: AlbertoLanchas <albertolsn7@gmail.com>

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="index.css">
   <title>Oyxgen Shop</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,16 +13,64 @@
 </head>
 
 <body>
+
+  <!-- HEADER -->
   <header class="Header">
-    <h1>OXYGENShop</h1>
-    <button></button>
-    </head>
-    <main class="Main">
-      <div class="Home">Home</div>
-      <div class="Princing">Princing</div>
-      <div class="Contact">Contact</div>
-    </main>
-    <footer class="Footer">Footer</footer>
+    <h1 class="Header-title">OXYGENShop</h1>
+    <button class="Header-menu"></button>
+  </header>
+
+  <!-- MAIN  -->
+  <main class="Main">
+    <div class="Home">
+      <h2 class="Home-title">Sell More!</h2>
+      <p class="Home-text">Open shop on our platform and
+        increase your sales</p>
+      <button class="Home-shop">Open your shop</button>
+      <img src="./assets/Background.png" alt="Background" class="Home-background">
+    </div>
+
+    <div class="Results">
+      <h3 class="Results-title">The most popular sales platform in country</h3>
+      <div class="Results-logo"></div>
+      <div class="Results-logo--1">
+        <div class="Results-logo-people">
+          <p>100000+</p>
+          <p>daily entries</p>
+        </div>
+      </div>
+      <div class="Results-logo--2">
+        <div class="Results-logo-people">
+          <p>2000000+</p>
+          <p>seen products
+            every day</p>
+        </div>
+      </div>
+      <div class="Results-logo--3">
+        <div class="Results-logo-people">
+          <p>10000+</p>
+          <p>added posts
+            daily</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="Details"></div>
+
+  </main>
+
+
+  <!-- FOOTER -->
+  <footer class="Footer">
+    <h2 class="Footer-title">OXYGENShop</h2>
+    <p class="Footer-copyright">© 2022 OXYGEN, All Rights Reserved</p>
+    <div class="Footer-logos">
+      <a class="Footer-logos--twitter">Twitter</a>
+      <a class="Footer-logos--facebook">Facebook</a>
+    </div>
+  </footer>
+
+
 </body>
 
 </html>
