Add display block to all elements
Signed-off-by: AlbertoLanchas <albertolsn7@gmail.com>

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <p class="Home-text">Open shop on our platform and
         increase your sales</p>
       <button class="Home-shop">Open your shop</button>
-      <img src="./assets/Background.png" alt="Background" class="Home-background">
     </div>
+    <img src="./assets/Background.png" alt="Background" class="Background">
 
     <div class="Results">
       <h3 class="Results-title">The most popular sales platform in country</h3>
