Add to Details section componts First and Shop in mobile design
Signed-off-by: AlbertoLanchas <albertolsn7@gmail.com>

--- a/index.html
+++ b/index.html
@@ -55,7 +55,43 @@
       </div>
     </div>
 
-    <div class="Details"></div>
+    <div class="Details">
+      <div class="First">
+        <div class="First-image">
+          <img src="./assets/Background.png" alt="photo" class="First-image--photo">
+          <div class="First-image--rectangle"></div>
+        </div>
+        <div class="First-description">
+          <h3 class="First-description--title">Be alway first</h3>
+          <p class="First-description--paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod
+            tempor
+            incididunt ut labore et
+            dolore magna
+            aliqua. Ut enim ad minim veniam.</p>
+        </div>
+
+
+      </div>
+      <div class="Shop">
+        <div class="Shop-image">
+          <img src="./assets/Background.png" alt="photo" class="Shop-image--photo">
+          <div class="Shop-image--rectangle"></div>
+        </div>
+        <div class="Shop-description">
+          <h3 class="Shop-description--title">Your shop is where you are!</h3>
+          <p class="Shop-description--paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod
+            tempor
+            incididunt ut labore et
+            dolore magna
+            aliqua. Ut enim ad minim veniam.</p>
+        </div>
+
+
+      </div>
+      <div class="Brand"></div>
+    </div>
 
   </main>
 
