Add princing styles and form  html
Signed-off-by: AlbertoLanchas <albertolsn7@gmail.com>

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       </div>
     </div>
 
+    <!-- DETAILS -->
     <div class="Details">
       <div class="First">
         <div class="First-image">
@@ -90,14 +91,140 @@
 
 
       </div>
-      <div class="Brand"></div>
+      <div class="Brand">
+        <div class="Brand-image">
+          <img src="./assets/Background.png" alt="photo" class="Brand-image--photo">
+          <div class="Brand-image--rectangle"></div>
+        </div>
+        <div class="Brand-description">
+          <h3 class="Brand-description--title">Increase recognition your brand!</h3>
+          <p class="Brand-description--paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod
+            tempor
+            incididunt ut labore et
+            dolore magna
+            aliqua. Ut enim ad minim veniam.</p>
+        </div>
+
+
+      </div>
     </div>
 
+    <div class="Princing">
+      <h3 class="Princing-title">Princing</h3>
+
+
+      <div class="Suscription basic">
+        <div class="Suscription-general">
+          <h4 class="Suscription-general--type">Basic</h4>
+          <p class="Suscription-general--price">$0</p>
+        </div>
+        <div class="Suscription-details">
+          <div class="Suscription-details--text">
+            <i class="checked">A</i>
+            <p>100 MB HDD</p>
+            <i class="checked">A</i>
+            <p>1 Subdomain</p>
+            <i class="checked">A</i>
+            <p>2 E-mails</p>
+            <i class="checked">A</i>
+            <p>Two years license</p>
+            <i class="checked">A</i>
+            <p>Full suport</p>
+          </div>
+        </div>
+        <button class="Suscription-begin">Begin</button>
+      </div>
+
+
+
+      <div class="Suscription professional">
+        <div class="Suscription-general">
+          <h4 class="Suscription-general--type">Professional</h4>
+          <p class="Suscription-general--price">$25</p>
+          <p class="Suscription-limited">Limited offer</p>
+        </div>
+        <div class="Suscription-details">
+          <div class="Suscription-details--text">
+            <i class="checked">A</i>
+            <p>500 MB HDD</p>
+            <i class="checked">A</i>
+            <p>2 Subdomains</p>
+            <i class="checked">A</i>
+            <p>5 E-mails</p>
+            <i class="checked">A</i>
+            <p>One year license</p>
+            <i class="checked">A</i>
+            <p>Full suport</p>
+          </div>
+        </div>
+
+        <button class="Suscription-begin">Begin</button>
+      </div>
+    </div>
+
+
+
+    <div class="Suscription premium">
+      <div class="Suscription-general">
+        <h4 class="Suscription-general--type">Premium</h4>
+        <p class="Suscription-general--price">$60</p>
+        <p class="Suscription-limited">Limited offer</p>
+      </div>
+      <div class="Suscription-details">
+        <div class="Suscription-details--text">
+          <i class="checked">A</i>
+          <p>2 GB HDD</p>
+          <i class="checked">A</i>
+          <p>5 Subdomains</p>
+          <i class="checked">A</i>
+          <p>20 E-mails</p>
+          <i class="checked">A</i>
+          <p>Two years license</p>
+          <i class="checked">A</i>
+          <p>Full suport</p>
+        </div>
+      </div>
+      <button class="Suscription-begin">Begin</button>
+    </div>
+    </div>
+
+
+    <div class="Form">
+      <h3 class="Form-title">Any questions?</h3>
+      <p class="Form-paragraph">Leave your email address or call us!</p>
+      <div class="Form-details">
+        <i>A</i>
+        <p>info@bestshop.xyz</p>
+        <i>T</i>
+        <p>123 456 789</p>
+      </div>
+
+      <div class="Form-name">
+        <span>NAME</span>
+        <input type="text">
+      </div>
+      <div class="Form-email">
+        <span>EMAIL</span>
+        <input type="text">
+      </div>
+      <div><input type="checkbox">
+        <p>I hereby give consent for my personal data included in my application to be processed for the purposes of the
+          recruitment process under the European Parliament's and Council of the European Union Regulation on the
+          Protection of
+          Natural Persons as of 27 April 2016, with regard to the processing of personal data and on the free movement
+          of such
+          data, and repealing Directive 95/46/EC (Data Protection Directive)</p>
+      </div>
+      <button>
+        <Send></Send>
+      </button>
+    </div>
   </main>
 
 
   <!-- FOOTER -->
-  <footer class="Footer">
+  <footer class=" Footer">
     <h2 class="Footer-title">OXYGENShop</h2>
     <p class="Footer-copyright">© 2022 OXYGEN, All Rights Reserved</p>
     <div class="Footer-logos">
