Add png files and styles to form
Signed-off-by: AlbertoLanchas <albertolsn7@gmail.com>

--- a/index.html
+++ b/index.html
@@ -193,8 +193,10 @@
           <input class="questions__email--input" type="text">
         </div>
 
-        <div><input type="checkbox">
-          <p>I hereby give consent for my personal data included in my application to be processed for the purposes of
+        <div class="questions__consent">
+          <input type="checkbox" class="questions__consent--input">
+          <p class="questions__consent--p">I hereby give consent for my personal data included in my application to be
+            processed for the purposes of
             the
             recruitment process under the European Parliament's and Council of the European Union Regulation on the
             Protection of
