Add styles to details section
Signed-off-by: AlbertoLanchas <albertolsn7@gmail.com>

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <title>Oyxgen Shop</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -17,7 +18,9 @@
   <!-- HEADER -->
   <header class="header">
     <h1 class="header__h1">OXYGENShop</h1>
-    <button class="header__button"></button>
+    <button class="header__button">
+      <img src="./assets/Menu.png" alt="Menu">
+    </button>
   </header>
 
   <!-- MAIN  -->
@@ -33,81 +36,75 @@
     <img src="./assets/Background.png" alt="Background" class="background">
 
     <div class="results">
-      <h3 class="results-title">The most popular sales platform in country</h3>
-      <div class="results-logo"></div>
-      <div class="results-logo--1">
-        <div class="results-logo-people">
-          <p>100000+</p>
-          <p>daily entries</p>
-        </div>
+      <h3 class="results__h3">The most popular sales platform in country</h3>
+      <div class="person">
+        <div class="person__background"></div>
+        <img src="./assets/Person 2.png" alt="Person" class="person__img">
+        <p class="person__number">100000+</p>
+        <p class="person__details">daily entries</p>
       </div>
-      <div class="results-logo--2">
-        <div class="results-logo-people">
-          <p>2000000+</p>
-          <p>seen products
-            every day</p>
-        </div>
+      <div class="eye">
+        <div class="eye__background"></div>
+        <img src="./assets/Eye 2.png" alt="Person" class="eye__img">
+        <p class="eye__number">2000000+</p>
+        <p class="eye__details">seen products
+          every day</p>
       </div>
-      <div class="results-logo--3">
-        <div class="results-logo-people">
-          <p>10000+</p>
-          <p>added posts
-            daily</p>
-        </div>
+      <div class="group">
+        <div class="group__background"></div>
+        <img src="./assets/Group.png" alt="Person" class="group__img">
+        <p class="group__number">10000+</p>
+        <p class="group__details">added posts
+          daily</p>
       </div>
     </div>
 
     <!-- DETAILS -->
     <div class="Details">
-      <div class="First">
-        <div class="First-image">
-          <img src="./assets/Macbook2 1.png" alt="photo" class="First-image--photo">
-          <div class="First-image--rectangle"></div>
+      <div class="first">
+        <div class="first__image">
+          <img src="./assets/Macbook2 2.png" alt="photo" class="first__image--photo">
+          <div class="first__image--circle"></div>
         </div>
-        <div class="First-description">
-          <h3 class="First-description--title">Be alway first</h3>
-          <p class="First-description--paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+        <div class="first__description">
+          <h3 class="first__description--h3">Be alway first</h3>
+          <p class="first__description--p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod
             tempor
             incididunt ut labore et
             dolore magna
             aliqua. Ut enim ad minim veniam.</p>
         </div>
-
-
       </div>
-      <div class="Shop">
-        <div class="Shop-image">
-          <img src="./assets/iPhone2 2.png" alt="photo" class="Shop-image--photo">
-          <div class="Shop-image--rectangle"></div>
+      <div class="shop">
+        <div class="shop__image">
+          <img src="./assets/iPhone2 2.png" alt="photo" class="shop__image--photo">
+          <div class="shop__image--circle"></div>
         </div>
-        <div class="Shop-description">
-          <h3 class="Shop-description--title">Your shop is where you are!</h3>
-          <p class="Shop-description--paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+        <div class="shop__description">
+          <h3 class="shop__description--h3">Your shop is where you are!</h3>
+          <p class="shop__description--p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod
             tempor
             incididunt ut labore et
             dolore magna
             aliqua. Ut enim ad minim veniam.</p>
         </div>
-
-
       </div>
-      <div class="Brand">
-        <div class="Brand-image">
-          <img src="./assets/Trumpet 2.png" alt="photo" class="Brand-image--photo">
-          <div class="Brand-image--rectangle"></div>
-        </div>
-        <div class="Brand-description">
-          <h3 class="Brand-description--title">Increase recognition your brand!</h3>
-          <p class="Brand-description--paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+      <div class="brand">
+        <div class="brand__description">
+          <h3 class="brand__description--h3">Increase recognition your brand!</h3>
+          <p class="brand__description--p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod
             tempor
             incididunt ut labore et
             dolore magna
             aliqua. Ut enim ad minim veniam.</p>
         </div>
-
+        <div class="brand__image">
+          <img src="./assets/Trumpet 2.png" alt="photo" class="brand__image--photo">
+          <div class="brand__image--circle"></div>
+        </div>
 
       </div>
     </div>
