Add styles to desktop
Signed-off-by: AlbertoLanchas <albertolsn7@gmail.com>

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
     <section class="details">
       <div class="first">
         <div class="first__image">
-          <img src="./assets/Macbook2 2.png" alt="photo" class="first__image--photo">
-          <div class="first__image--circle"></div>
+          <div class="first__image--circle">
+          </div><img src="./assets/Macbook2 2.png" alt="photo" class="first__image--photo">
         </div>
         <div class="first__description">
           <h3 class="first__description--h3">Be alway first</h3>
@@ -81,8 +81,9 @@
       </div>
       <div class="shop">
         <div class="shop__image">
-          <img src="./assets/iPhone2 2.png" alt="photo" class="shop__image--photo">
-          <div class="shop__image--circle"></div>
+
+          <div class="shop__image--circle"><img src="./assets/iPhone2 2.png" alt="photo" class="shop__image--photo">
+          </div>
         </div>
         <div class="shop__description">
           <h3 class="shop__description--h3">Your shop is where you are!</h3>
@@ -105,8 +106,9 @@
             aliqua. Ut enim ad minim veniam.</p>
         </div>
         <div class="brand__image">
-          <img src="./assets/Trumpet 2.png" alt="photo" class="brand__image--photo">
-          <div class="brand__image--circle"></div>
+          <div class="brand__image--circle">
+            <img src="./assets/Trumpet 2.png" alt="photo">
+          </div>
         </div>
 
       </div>
