Styles to desktop for suscription and details complete
Signed-off-by: AlbertoLanchas <albertolsn7@gmail.com>

--- a/index.html
+++ b/index.html
@@ -39,21 +39,21 @@
       <h3 class="results__h3">The most popular sales platform in country</h3>
       <div class="results__flex">
         <div class="person">
-          <div class="person__background"></div>
-          <img src="./assets/Person 2.png" alt="Person" class="person__img">
+          <div class="person__background"><img src="./assets/Person 2.png" alt="Person" class="person__img"></div>
+
           <p class="person__number">100000+</p>
           <p class="person__details">daily entries</p>
         </div>
         <div class="eye">
-          <div class="eye__background"></div>
-          <img src="./assets/Eye 2.png" alt="Person" class="eye__img">
+          <div class="eye__background"><img src="./assets/Eye 2.png" alt="Person" class="eye__img"></div>
+
           <p class="eye__number">2000000+</p>
           <p class="eye__details">seen products
             every day</p>
         </div>
         <div class="group">
-          <div class="group__background"></div>
-          <img src="./assets/Group.png" alt="Person" class="group__img">
+          <div class="group__background"><img src="./assets/Group.png" alt="Person" class="group__img"></div>
+
           <p class="group__number">10000+</p>
           <p class="group__details">added posts
             daily</p>
