Add styles to mobile desing
Signed-off-by: AlbertoLanchas <albertolsn7@gmail.com>

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
       <div class="first">
         <div class="first__image">
           <div class="first__image--circle">
-          </div><img src="./assets/Macbook2 2.png" alt="photo" class="first__image--photo">
+          </div>
+          <img src="./assets/Macbook2 2.png" alt="photo" class="first__image--photo">
         </div>
         <div class="first__description">
           <h3 class="first__description--h3">Be alway first</h3>
@@ -174,8 +175,15 @@
           <h3 class="questions__h3">Any questions?</h3>
           <p class="questions__p">Leave your email address or call us!</p>
           <ul class="questions__ul">
-            <li class="questions__ul--mail">info@bestshop.xyz</li>
-            <li class="questions__ul--phone">123 456 789</li>
+            <li class="questions__ul--mail">
+              <img src="./assets/Mail Icon 2.png" alt="Mail">
+              <p>info@bestshop.xyz</p>
+            </li>
+            <li class="questions__ul--phone">
+              <img src="./assets/Phone Icon 2.png" alt="">
+              <p></p>info@bestshop.xyz
+            </li>
+            </li>
           </ul>
         </div>
         <form action="submit" class="questions__form">
