Add navbar version desktop and fix details firs component
Signed-off-by: AlbertoLanchas <albertolsn7@gmail.com>

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
     <button class="header__button">
       <img src="./assets/Menu.png" alt="Menu">
     </button>
+    <div class="header__links">
+      <a>WHY US</a>
+      <a>BENEFITS</a>
+      <a>PRICES</a>
+      <a>CONTACT</a>
+    </div>
   </header>
 
   <!-- MAIN  -->
@@ -222,6 +228,27 @@
 
   <button class="scroll-top-btn">&#11014</button>
   <span id="scroll-porcentaje"></span>
+
+  <div class="slider">
+    <div class="slider-slides">
+      <div class="slider-slide active">
+        <img src="https://placeimg.com/600/400/people" alt="architecture">
+      </div>
+      <div class="slider-slide active">
+        <img src="https://placeimg.com/600/400/architecture" alt="architecture">
+      </div>
+      <div class="slider-slide active">
+        <img src="https://placeimg.com/600/400/nature" alt="architecture">
+      </div>
+      <div class="slider-slide active">
+        <img src="https://placeimg.com/600/400/any" alt="architecture">
+      </div>
+      <div class="slider-btn">
+        <a href="#" class="prev">&laquo</a>
+        <a href="#" class="next">&raquo</a>
+      </div>
+    </div>
+  </div>
 
   <!-- FOOTER -->
   <footer class="footer">
