--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
     <button class="header__button">
       <img src="./assets/Menu.png" alt="Menu">
     </button>
+    <aside class="panel header__links" id="menu">
+      <nav class="menu">
+        <a>WHY US</a>
+        <a>BENEFITS</a>
+        <a>PRICES</a>
+        <a>CONTACT</a>
+      </nav>
+    </aside>
   </header>
 
   <!-- MAIN  -->
@@ -34,6 +42,7 @@
     </div>
 
     <img src="./assets/Background.png" alt="Background" class="background">
+
 
     <div class="results">
       <h3 class="results__h3">The most popular sales platform in country</h3>
@@ -144,7 +153,7 @@
             <li class="suscription1__ul--li">500 MB HDD</li>
             <li class="suscription1__ul--li">2 Subdomains</li>
             <li class="suscription1__ul--li">5 E-mails</li>
-            <li class="suscription1__ul--li false">One year license</li>
+            <li class="suscription1__ul--li">One year license</li>
             <li class="suscription1__ul--li false">Full support</li>
           </ul>
           <button class="suscription1__button">Begin</button>
@@ -160,8 +169,8 @@
             <li class="suscription2__ul--li">2 GB HDD</li>
             <li class="suscription2__ul--li">5 Subdomains</li>
             <li class="suscription2__ul--li">20 E-mails</li>
-            <li class="suscription2__ul--li false">Two years license</li>
-            <li class="suscription2__ul--li false">Full support</li>
+            <li class="suscription2__ul--li">Two years license</li>
+            <li class="suscription2__ul--li">Full support</li>
           </ul>
           <button class="suscription2__button">Begin</button>
         </section>
@@ -181,7 +190,7 @@
             </li>
             <li class="questions__ul--phone">
               <img src="./assets/Phone Icon 2.png" alt="">
-              <p></p>info@bestshop.xyz
+              <p></p>123 456 789
             </li>
             </li>
           </ul>
