Fix conflict merge
Signed-off-by: AlbertoLanchas <albertolsn7@gmail.com>

--- a/index.html
+++ b/index.html
@@ -22,8 +22,15 @@
     <h1 class="header__h1">OXYGENShop</h1>
     <button class="header__button panel-btn is-active">
       <img src="./assets/Menu.png" alt="Menu" class="header__button--menu" id="menuIcon">
-      <!-- <img src="./assets/menuCross.png" alt="Menu" class="header__button--cross"> -->
     </button>
+    <aside class="panel header__links" id="menu">
+      <nav class="menu">
+        <a>WHY US</a>
+        <a>BENEFITS</a>
+        <a>PRICES</a>
+        <a>CONTACT</a>
+      </nav>
+    </aside>
   </header>
 
   <!-- MAIN  -->
@@ -122,17 +129,11 @@
     <div class="pricing">
       <h3 class="pricing__h3">Pricing</h3>
 
-      <select class="pricing__select" id="pricingSelect" name="selectCurrency">
-        <option value="gbp" id="gbp-option">GBP </option>
-        <option value="eur" id="eur-option">EUR</option>
-        <option value="usd" id="usd-option" selected>USD </option>
-      </select>
-
       <div class="pricing__details">
         <section class="suscription">
           <div class="suscription__price">
             <h4 class="suscription__price--h4">Basic</h4>
-            <p class="suscription__price--p" id="basicPrice"></p>
+            <p class="suscription__price--p" id="basicPrice">$0</p>
           </div>
 
           <ul class="suscription__ul">
@@ -147,7 +148,7 @@
         <section class="suscription1">
           <div class="suscription1__price">
             <h4 class="suscription1__price--h4">Professional</h4>
-            <p class="suscription1__price--p" id="professionalPrice"></p>
+            <p class="suscription1__price--p" id="professionalPrice">$25</p>
             <p class="suscription1__price--offer">Limited offer</p>
           </div>
 
@@ -163,7 +164,7 @@
         <section class="suscription2">
           <div class="suscription2__price">
             <h4 class="suscription2__price--h4">Premium</h4>
-            <p class="suscription2__price--p" id="premiumPrice"></p>
+            <p class="suscription2__price--p" id="premiumPrice">$60</p>
             <p class="suscription2__price--offer">Limited offer</p>
           </div>
 
@@ -231,47 +232,12 @@
   </main>
 
 
-  <button class="scroll-top-btn">&#11014</button>
-  <span id="scroll-porcentaje"></span>
-
-  <div class="slider">
-    <div class="slider-slides">
-      <div class="slider-slide active">
-        <img src="./assets/nature (1).webp" alt="nature">
-      </div>
-      <div class="slider-slide">
-        <img src="./assets/nature (2).webp" alt="nature">
-      </div>
-      <div class="slider-slide">
-        <img src="./assets/nature (3).webp" alt="nature">
-      </div>
-      <div class="slider-slide">
-        <img src="./assets/nature (4).webp" alt="nature">
-      </div>
-      <div class="slider-btn">
-        <button class="prev">&laquo</button>
-        <button class="next">&raquo</button>
-      </div>
-    </div>
-    <div class="slider__btnContainer">
-      <button class="slider__btn" value="0"></button>
-      <button class="slider__btn" value="1"></button>
-      <button class="slider__btn" value="2"></button>
-      <button class="slider__btn" value="3"></button>
-    </div>
-  </div>
 
 
-  <article class="modal" ">
-    <div class=" modal-container">
-    <button class="modal-close">
-      X
-    </button>
-    <p>Suscribe to our newsletter</p>
-    <input class="modal__email" id="emailModal" type="text">
-    <button>Suscribe</button>
-    </div>
-  </article>
+
+
+
+
 
   <!-- FOOTER -->
   <footer class="footer">
